# mahi-gui

./: .clang-format  CMakeLists.txt
app_home/config/: GreatWall.json
app_home/data/: te_raw_11001.gwengine.id
app_home/include/framework/application/: great_wall_app.h  service.h
app_home/include/framework/common/: common.h  data_struct.h  data_type.h  errno.h  exception.h  logger.h  time.h
app_home/include/framework/market/: filter_context.h  market.h  mkt_handler.h  mkt_plugin-inl.h  mkt_plugin.h
app_home/include/framework/message/: package.cpp  package.h
app_home/include/framework/router/: channel_spi.h  parser.h  trade_engine_base.h
app_home/include/framework/server/: strategy_manager.h
app_home/include/framework/strategy/: context.h  instance-inl.h  instance.h  rc_base.h  strat_engine.h
app_home/include/framework/time/: clock_util.h
app_home/lib/: MarketDataConfig.ini.template
application/: CMakeLists.txt
application/dear_trader/: CMakeLists.txt  basicplot.cpp  dataengine.cc  dataengine.h  gwengine.cc  gwengine.h  instrumentpack.h  logger_wrapper.cc  logger_wrapper.h  trader.cpp  trader.h
config/: AtFrame.json.template  GreatWall-eqapi-tfmd-sample.json  GreatWall.json.template  GreatWall.oos.json.template  MarketDataConfig.ini.template  OpenOrderService.json.template  ctpcompete_config.json.template  dumpormkt_config.json.template  file-insert-example-ic2001.json  file-insert-rb.json  file-insert.json.template  fireworks_ohlc_config.json  greatwall.resource.json.template  greatwall_host_config.json.template  icetf_main_config.json.template  manualstrat_config.json.template  sec_table.csv  stdohlc_config.json  test_cases_icetf_1_all.json.template  test_cases_icetf_manual_01.json  test_cases_icetf_manual_02.json  test_cases_icetf_manual_03.json  test_cases_icetf_realtime_01.json  test_cases_icetf_realtime_03.json  test_cases_sample.json  tradex_at_config.json  tradex_zxjt_at_config_01.json  tradex_zxjt_at_config_01_gbk.json  trading_calendar.csv  wind_export_config.json
config/GreatWall/: GreatWall-bk.json  GreatWall-ctp-ntr.json  GreatWall-ctp-tr.json  GreatWall-ibtws-7497.json.template  GreatWall-jni_wrapper.json  GreatWall-jr_datadump.json  GreatWall-sample01.json  GreatWall-sim41.62.json
config/TEST_SUITE/mock_rxtrade/: GreatWall.json  MockTestCase.xml  test_adapter-rxtrade-credit-test.ini  update_account.sql
config/lic/: orchid.lic
config/lic/20200702/: openorder.lic
config/prod/GreatWall-prod-qmtfile-zxjt/: GreatWall.json
config/prod/IcSwap-prod-20200214/: GreatWall.json
config/prod/zhqh/: GreatWall.json
config/runtime/run_qmtfile/: QmtResultAccountInfoFilePath.csv  QmtResultOrderFilePath.csv  QmtResultPositionFilePath.csv  QmtResultTradeFilePath.csv
config/strategy/ic-etf-wangfeng/: config.json
examples/: ex_plots_benchmark.cpp
scripts/: Readme.md  linux.sh  setVsEnvLatest.bat  vs2015.bat  vs2019.bat  x64_2019.bat
src/pch/: compat.cc  compat.h  compat_impl.cc  compat_time.cc  compat_time.h
src/tdgui/: Readme.txt
src/tdgui/common/: names.cpp  names.h
src/tdgui/market/: select_stks.cpp  select_stks.h
(+15 files in other folders)
